--- a/src/admin_panel.html
+++ b/src/admin_panel.html
@@ -4,7 +4,7 @@
         <title>2016 Sony 經銷商大會</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="description" content="justangon's blog">
+        <meta name="description" content="sony event">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet"href="https://cdn.jsdelivr.net/pure/0.6.0/pure-min.css">
         <link rel="stylesheet" href="css/admin_main.css">
