adding start btn

--- a/src/admin_panel.html
+++ b/src/admin_panel.html
@@ -24,7 +24,8 @@
                 </div>
                 <div class="control-set">
                     <ul>
-                        <li><a href="#" id="lottery_btn">開始抽獎</a></li>
+                        <li><a href="#" id="start_btn">開始抽獎</a></li>
+                        <li><a href="#" id="lottery_btn">執行抽獎</a></li>
                         <li><a href="#" id="stop_btn">結束抽獎</a></li>
                     </ul>
                 </div>
