--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!--link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css"-->
         <link rel="stylesheet"href="https://cdn.jsdelivr.net/pure/0.6.0/pure-min.css">
-        <link rel="stylesheet" href="style/main.css">
+        <link rel="stylesheet" href="css/main.css">
         <!--[if lte IE 8]>
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/pure/0.6.0/grids-responsive-old-ie-min.css">
         <![endif]-->
@@ -60,11 +60,11 @@
         <br>
         謝謝您的積極參與 祝您在第二階段能獲得大獎哦！
       </div>
-      <button class="exitTest blackbutton">離開</button>
+      <button id="exit-btn" class="exitTest blackbutton">離開</button>
     </div>
 
     </body>
-    <script src="js/zepto.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/lib/zepto.min.js"></script>
+    <script src="js/func/main.js"></script>
 </html>
 
