--- a/src/admin_panel.html
+++ b/src/admin_panel.html
@@ -21,6 +21,11 @@
                 <div class="logo"></div>
                 <div class="info-set">
                     <span class="info-set-content">sony 經銷者大會</span>
+                    <div class='award-section hidden'>
+                        <p class='award-title'>得獎者</p>
+                        <p class='award-name'></p>
+                        <p class='award-phone'></p>
+                    </div>
                 </div>
                 <div class="control-set">
                     <ul>
