--- a/src/index.html
+++ b/src/index.html
@@ -45,21 +45,19 @@
             </div>
           </div>
           <div class="progressBar">
-            <div class="progressBarTitle">總體問卷完成度</div>
-            <div class="progressPercentage">0%</div>
-            <br>
+            <div class="pure-g">
+                <div class="progressBarTitle pure-u-1-2">總體問卷完成度</div>
+                <div class="progressPercentage pure-u-1-2">0%</div>
+            </div>
             <div class="barbackground">
-            <div class="barPercentage"></div>
+                <div class="barPercentage"></div>
             </div>
           </div>
-          <div>
-        </div>
     </div>
     <div class="exitPage fade-in">
       <div class="exitText">
         <h1>Congratulation!</h1>
-        <br>
-        謝謝您的積極參與 祝您在第二階段能獲得大獎哦！
+        <span>謝謝您的積極參與，祝您在第二階段能獲得大獎哦！</span>
       </div>
       <button id="exit-btn" class="exitTest blackbutton">離開</button>
     </div>
